# Chess-Engine

./: .clang-format  CMakeLists.txt  LICENSE  MakeFile  README.md
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  main.cpp  movegen.cpp  movegen.h  types.h  uci.cpp  uci.h
